--- a/assets/styles/scss/base/_reset.scss
+++ b/assets/styles/scss/base/_reset.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  This partial file contains the custom `reset` HTML tags
+*  This partial file contains the custom `reset` HTML tags
 \* -------------------------------------------------------------------------- */
 
 // See '../vendors/reboot';
