--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -1,27 +1,27 @@
 /* -------------------------------------------------------------------------- *\
-// *  This partial file contains all application-wide 'typography'.
+*  This partial file contains all application-wide 'typography'.
 \* -------------------------------------------------------------------------- */
 
 /*
-  -  Headings
+-  Headings
 */
 
 /*
-  -  Inline text elements
+-  Inline text elements
 */
 
 /*
-  -  Abbreviations
+-  Abbreviations
 */
 
 /*
-  -  Blockquotes
+-  Blockquotes
 */
 
 /*
-  -  Lists
+-  Lists
 */
 
 /*
-  - Responsive font sizes
+-  Responsive font sizes
 */
