--- a/assets/styles/scss/components/forms/_checkbox.scss
+++ b/assets/styles/scss/components/forms/_checkbox.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _checkbox.scss: This partial file contains all 'checkbox' styles.
+*  _checkbox.scss: This partial file contains all 'checkbox' styles.
 \* -------------------------------------------------------------------------- */
