--- a/assets/styles/scss/components/multi-part/_tabs.scss
+++ b/assets/styles/scss/components/multi-part/_tabs.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _tabs.scss: This partial file contains all 'tabs' styles.
+*  _tabs.scss: This partial file contains all 'tabs' styles.
 \* -------------------------------------------------------------------------- */
