--- a/assets/styles/scss/components/single-part/_delete.scss
+++ b/assets/styles/scss/components/single-part/_delete.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _delete.scss: This partial file contains all 'delete' styles.
+*  _delete.scss: This partial file contains all 'delete' styles.
 \* -------------------------------------------------------------------------- */
