--- a/assets/styles/scss/components/single-part/_icon.scss
+++ b/assets/styles/scss/components/single-part/_icon.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _icon.scss: This partial file contains all 'icon' styles.
+*  _icon.scss: This partial file contains all 'icon' styles.
 \* -------------------------------------------------------------------------- */
 
 svg {
