--- a/assets/styles/scss/components/single-part/_image.scss
+++ b/assets/styles/scss/components/single-part/_image.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _image.scss: This partial file contains all 'image' styles.
+*  _image.scss: This partial file contains all 'image' styles.
 \* -------------------------------------------------------------------------- */
