--- a/assets/styles/scss/components/single-part/_toggle.scss
+++ b/assets/styles/scss/components/single-part/_toggle.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _toggle.scss: This partial file contains all 'toggle' styles.
+*  _toggle.scss: This partial file contains all 'toggle' styles.
 \* -------------------------------------------------------------------------- */
 
 .theme-switch-wrapper {
