--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _footer.scss: This partial file contains all 'footer' styles.
+*  _footer.scss: This partial file contains all 'footer' styles.
 \* -------------------------------------------------------------------------- */
 
 .footer {
