--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _header.scss: This partial file contains all 'header' styles.
+*  _header.scss: This partial file contains all 'header' styles.
 \* -------------------------------------------------------------------------- */
 
 .topnav {
