--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -1,10 +1,10 @@
-// #  main.scss : This is the main scss file which imports the rest of the scss
-// #  files and compiles it into one css file in `css/main.css`.
+//  #  main.scss : This is the main scss file which imports the rest of the scss
+//  #  files and compiles it into one css file in `css/main.css`.
 
 @charset "UTF-8";
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 1 - `abstracts/`
++  Partial SCSS Group 1 - `abstracts/`
 \* -------------------------------------------------------------------------- */
 @import 'abstracts/variables';
 @import 'abstracts/functions';
@@ -14,19 +14,19 @@
 @import 'abstracts/animations';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 2 - `vendors/`
++  Partial SCSS Group 2 - `vendors/`
 \* -------------------------------------------------------------------------- */
 @import 'vendors/reboot';
-// @import 'vendors/bulma';
+@import 'vendors/bulma';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 3 - `base/`
++  Partial SCSS Group 3 - `base/`
 \* -------------------------------------------------------------------------- */
 @import 'base/reset';
 @import 'base/typography';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 4 - `layout/`
++  Partial SCSS Group 4 - `layout/`
 \* -------------------------------------------------------------------------- */
 @import 'layout/header';
 @import 'layout/nav';
@@ -38,11 +38,11 @@
 @import 'layout/footer';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 5 - `components/`
++  Partial SCSS Group 5 - `components/`
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
-// *  Partial SCSS Group 5.1 - `components/single-part/`
+*  Partial SCSS Group 5.1 - `components/single-part/`
 \* -------------------------------------------------------------------------- */
 @import 'components/single-part/block';
 @import 'components/single-part/box';
@@ -59,7 +59,7 @@
 @import 'components/single-part/toggle';
 
 /* -------------------------------------------------------------------------- *\
-// *  Partial SCSS Group 5.2 - `components/forms/`
+*  Partial SCSS Group 5.2 - `components/forms/`
 \* -------------------------------------------------------------------------- */
 @import 'components/forms/general';
 @import 'components/forms/input';
@@ -70,7 +70,7 @@
 @import 'components/forms/file';
 
 /* -------------------------------------------------------------------------- *\
-// *  Partial SCSS Group 5.3 - `components/multi-part/`
+*  Partial SCSS Group 5.3 - `components/multi-part/`
 \* -------------------------------------------------------------------------- */
 @import 'components/multi-part/breadcrumb';
 @import 'components/multi-part/card';
@@ -84,16 +84,18 @@
 @import 'components/multi-part/tabs';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 6 - `pages/`
++  Partial SCSS Group 6 - `pages/`
 \* -------------------------------------------------------------------------- */
 @import 'pages/index';
 @import 'pages/home';
+@import 'pages/home-restoration';
+@import 'pages/home-webshop';
 @import 'pages/login';
 @import 'pages/profile';
 @import 'pages/storefront';
 
 /* -------------------------------------------------------------------------- *\
-// +  Partial SCSS Group 7 - `themes/`
++  Partial SCSS Group 7 - `themes/`
 \* -------------------------------------------------------------------------- */
 @import 'themes/light';
 @import 'themes/dark';
