--- a/assets/styles/scss/pages/_index.scss
+++ b/assets/styles/scss/pages/_index.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _index.scss: This partial file contains the styles of the 'index' page.
+*  _index.scss: This partial file contains the styles of the 'index' page.
 \* -------------------------------------------------------------------------- */
