--- a/assets/styles/scss/themes/_dark.scss
+++ b/assets/styles/scss/themes/_dark.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _dark.scss: This partial file contains the 'dark' theme.
+*  _dark.scss: This partial file contains the 'dark' theme.
 \* -------------------------------------------------------------------------- */
 
 [data-theme='dark'] {
