--- a/assets/styles/scss/components/forms/_file.scss
+++ b/assets/styles/scss/components/forms/_file.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _file.scss: This partial file contains all 'file' styles.
+*  _file.scss: This partial file contains all 'file' styles.
 \* -------------------------------------------------------------------------- */
