--- a/assets/styles/scss/components/forms/_general.scss
+++ b/assets/styles/scss/components/forms/_general.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _general.scss: This partial file contains all 'general' styles.
+*  _general.scss: This partial file contains all 'general' styles.
 \* -------------------------------------------------------------------------- */
