--- a/assets/styles/scss/components/forms/_input.scss
+++ b/assets/styles/scss/components/forms/_input.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _input.scss: This partial file contains all 'input' styles.
+*  _input.scss: This partial file contains all 'input' styles.
 \* -------------------------------------------------------------------------- */
