--- a/assets/styles/scss/components/forms/_select.scss
+++ b/assets/styles/scss/components/forms/_select.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _select.scss: This partial file contains all 'select' styles.
+*  _select.scss: This partial file contains all 'select' styles.
 \* -------------------------------------------------------------------------- */
