--- a/assets/styles/scss/components/forms/_textarea.scss
+++ b/assets/styles/scss/components/forms/_textarea.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _textarea.scss: This partial file contains all 'textarea' styles.
+*  _textarea.scss: This partial file contains all 'textarea' styles.
 \* -------------------------------------------------------------------------- */
