--- a/assets/styles/scss/components/multi-part/_breadcrumb.scss
+++ b/assets/styles/scss/components/multi-part/_breadcrumb.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _breadcrumb.scss: This partial file contains all 'breadcrumb' styles.
+*  _breadcrumb.scss: This partial file contains all 'breadcrumb' styles.
 \* -------------------------------------------------------------------------- */
