--- a/assets/styles/scss/components/multi-part/_dropdown.scss
+++ b/assets/styles/scss/components/multi-part/_dropdown.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _dropdown.scss: This partial file contains all 'dropdown' styles.
+*  _dropdown.scss: This partial file contains all 'dropdown' styles.
 \* -------------------------------------------------------------------------- */
