--- a/assets/styles/scss/components/multi-part/_message.scss
+++ b/assets/styles/scss/components/multi-part/_message.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _message.scss: This partial file contains all 'message' styles.
+*  _message.scss: This partial file contains all 'message' styles.
 \* -------------------------------------------------------------------------- */
