--- a/assets/styles/scss/components/multi-part/_modal.scss
+++ b/assets/styles/scss/components/multi-part/_modal.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _modal.scss: This partial file contains all 'modal' styles.
+*  _modal.scss: This partial file contains all 'modal' styles.
 \* -------------------------------------------------------------------------- */
