--- a/assets/styles/scss/components/single-part/_block.scss
+++ b/assets/styles/scss/components/single-part/_block.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _block.scss: This partial file contains all 'block' styles.
+*  _block.scss: This partial file contains all 'block' styles.
 \* -------------------------------------------------------------------------- */
