--- a/assets/styles/scss/components/single-part/_button.scss
+++ b/assets/styles/scss/components/single-part/_button.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _button.scss: This partial file contains all 'button' styles.
+*  _button.scss: This partial file contains all 'button' styles.
 \* -------------------------------------------------------------------------- */
