--- a/assets/styles/scss/components/single-part/_notification.scss
+++ b/assets/styles/scss/components/single-part/_notification.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _notification.scss: This partial file contains all 'notification' styles.
+*  _notification.scss: This partial file contains all 'notification' styles.
 \* -------------------------------------------------------------------------- */
