--- a/assets/styles/scss/components/single-part/_table.scss
+++ b/assets/styles/scss/components/single-part/_table.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _table.scss: This partial file contains all 'table' styles.
+*  _table.scss: This partial file contains all 'table' styles.
 \* -------------------------------------------------------------------------- */
