--- a/assets/styles/scss/layout/_article.scss
+++ b/assets/styles/scss/layout/_article.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _article.scss: This partial file contains all 'article' styles.
+*  _article.scss: This partial file contains all 'article' styles.
 \* -------------------------------------------------------------------------- */
