--- a/assets/styles/scss/layout/_main.scss
+++ b/assets/styles/scss/layout/_main.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _main.scss: This partial file contains all 'main' styles.
+*  _main.scss: This partial file contains all 'main' styles.
 \* -------------------------------------------------------------------------- */
