--- a/assets/styles/scss/pages/_home-restoration.scss
+++ b/assets/styles/scss/pages/_home-restoration.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-*  _progress-bars.scss: This partial file contains all 'progress-bars' styles.
+*  _home-restoration.scss: This partial file contains the styles of the 'home-restoration' page.
 \* -------------------------------------------------------------------------- */
