--- a/assets/styles/scss/pages/_login.scss
+++ b/assets/styles/scss/pages/_login.scss
@@ -1,3 +1,3 @@
 /* -------------------------------------------------------------------------- *\
-// *  _login.scss: This partial file contains the styles of the 'login' page.
+*  _login.scss: This partial file contains the styles of the 'login' page.
 \* -------------------------------------------------------------------------- */
