--- a/assets/styles/scss/themes/_light.scss
+++ b/assets/styles/scss/themes/_light.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------- *\
-// *  _light.scss: This partial file contains the 'light' theme.
+*  _light.scss: This partial file contains the 'light' theme.
 \* -------------------------------------------------------------------------- */
 
 :root,
