--- a/assets/styles/scss/components/multi-part/_card.scss
+++ b/assets/styles/scss/components/multi-part/_card.scss
@@ -1,3 +1,7 @@
 /* -------------------------------------------------------------------------- *\
 *  _card.scss: This partial file contains all 'card' styles.
 \* -------------------------------------------------------------------------- */
+
+.card {
+  background-color: aqua;
+}
