--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -2,6 +2,7 @@
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 1 - `abstracts/`
 \* -------------------------------------------------------------------------- */
+/* # <=======| Font-size |=======> */
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 2 - `vendors/`
 \* -------------------------------------------------------------------------- */
@@ -836,6 +837,10 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 *  _card.scss: This partial file contains all 'card' styles.
 \* -------------------------------------------------------------------------- */
+.card {
+  background-color: aqua;
+}
+
 /* -------------------------------------------------------------------------- *\
 *  _dropdown.scss: This partial file contains all 'dropdown' styles.
 \* -------------------------------------------------------------------------- */
@@ -881,6 +886,40 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 -  Section-2: Hot Items
 \* -------------------------------------------------------------------------- */
+.hot-items {
+  min-width: 400px;
+  padding: 4rem;
+  background-color: greenyellow;
+}
+
+.hot-items__container {
+  width: 100%;
+  max-width: 140rem;
+  margin: 0 auto;
+}
+
+.hot-items__title {
+  margin-bottom: 0.5rem;
+  color: var(--primary-color);
+  font-size: 3em;
+  font-weight: 700;
+}
+
+.hot-items__container {
+  width: 100%;
+  max-width: 140rem;
+  margin: 0 auto;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hot-items__title {
+  margin-bottom: 0.5rem;
+  color: var(--primary-color);
+  font-size: 3em;
+  font-weight: 700;
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Section-3: About
 \* -------------------------------------------------------------------------- */
