--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,6 +1,18 @@
 // -----------------------------------------------------------------------------
 // *  _variables.scss: This partial file contains all Scss 'variables'.
 // -----------------------------------------------------------------------------
+/* # <=======| Font-size |=======> */
+$font-scale: 1.2;
+$font-size: 1em;
+$font-size-1: $font-size * $font-scale;
+$font-size-2: $font-size-1 * $font-scale;
+$font-size-3: $font-size-2 * $font-scale;
+$font-size-4: $font-size-3 * $font-scale;
+$font-size-5: $font-size-4 * $font-scale;
+$font-size-6: $font-size-5 * $font-scale;
+$font-size-7: $font-size-6 * $font-scale;
+$font-size-8: $font-size-7 * $font-scale;
+$font-size-9: $font-size-8 * $font-scale;
 
 // # <=======| Font-weight |=======>
 $font-weight-text: 400; // Normal
