--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -2,7 +2,6 @@
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 1 - `abstracts/`
 \* -------------------------------------------------------------------------- */
-/* # <=======| Font-size |=======> */
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 2 - `vendors/`
 \* -------------------------------------------------------------------------- */
@@ -838,7 +837,15 @@ input:checked + .slider::before {
 *  _card.scss: This partial file contains all 'card' styles.
 \* -------------------------------------------------------------------------- */
 .card {
+  overflow: hidden;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 1rem;
   background-color: aqua;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -887,7 +894,7 @@ input:checked + .slider::before {
 -  Section-2: Hot Items
 \* -------------------------------------------------------------------------- */
 .hot-items {
-  min-width: 400px;
+  min-width: 20rem;
   padding: 4rem;
   background-color: greenyellow;
 }
@@ -899,10 +906,11 @@ input:checked + .slider::before {
 }
 
 .hot-items__title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   color: var(--primary-color);
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 700;
+  text-align: center;
 }
 
 .hot-items__container {
@@ -914,10 +922,44 @@ input:checked + .slider::before {
 }
 
 .hot-items__title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   color: var(--primary-color);
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 700;
+  text-align: center;
+}
+
+.hot-items-card {
+  width: 100%;
+  max-width: 140rem;
+  margin: 0 auto;
+  min-width: 300px;
+  max-width: 400px;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+}
+
+.hot-items-card__visual {
+  background-color: tan;
+}
+
+.hot-items-card__title {
+  margin: 0.5rem;
+  font-size: 1.2rem;
+  font-variant: small-caps;
+  font-weight: bold;
+  letter-spacing: 0.25rem;
+  text-align: left;
+  text-transform: lowercase;
 }
 
 /* -------------------------------------------------------------------------- *\
