--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -1,9 +1,31 @@
 // -----------------------------------------------------------------------------
 // *  _variables.scss: This partial file contains all Scss 'variables'.
 // -----------------------------------------------------------------------------
-/* # <=======| Font-size |=======> */
+
+// #  <=======| Sizes |=======>
+$size-xxsm: 0.25rem; // 4px
+$size-xsm: 0.5rem; // 8px
+$size-sm: 1rem; // 16px
+$size-md: 1.5rem; // 24px
+$size-lg: 2rem; // 32px
+$size-xl: 3rem; // 48px
+$size-xxl: 4rem; // 64px
+
+// #  <=======| Dimensions |=======>
+$dimension-xxsm: 20rem; // 320px
+$dimension-xsm: 40rem; // 640px
+$dimension-sm: 60rem; // 960px
+$dimension-md: 80rem; // 1280px
+$dimension-lg: 100rem; // 1600px
+$dimension-xl: 120rem; // 1920px
+$dimension-xxl: 140rem; // 2240px
+
+// #  <=======| Other sizes |=======>
+$max-width: $dimension-xxl;
+
+// #  <=======| Font-size |=======>
 $font-scale: 1.2;
-$font-size: 1em;
+$font-size: 1rem;
 $font-size-1: $font-size * $font-scale;
 $font-size-2: $font-size-1 * $font-scale;
 $font-size-3: $font-size-2 * $font-scale;
@@ -14,27 +36,19 @@ $font-size-7: $font-size-6 * $font-scale;
 $font-size-8: $font-size-7 * $font-scale;
 $font-size-9: $font-size-8 * $font-scale;
 
-// # <=======| Font-weight |=======>
+$font-size-subject: $font-size-8;
+$font-size-heading: $font-size-5;
+$font-size-text: $font-size-1;
+
+// #  <=======| Box-shadow |=======>
+$box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+
+// #  <=======| Text-shadow |=======>
+$text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+
+// #  <=======| Border-radius |=======>
+$border-radius: $size-sm; // 16px
+
+// #  <=======| Font-weight |=======>
 $font-weight-text: 400; // Normal
 $font-weight-heading: 700; // Bold
-
-// # <=======| Padding and margin sizes |=======>
-$size-xxsm: 0.25rem; // 4px
-$size-xsm: 0.5rem; // 8px
-$size-sm: 1rem; // 16px
-$size-md: 1.5rem; // 24px
-$size-lg: 2rem; // 32px
-$size-xl: 3rem; // 48px
-$size-xxl: 4rem; // 64px
-
-// # <=======| Dimension sizes |=======>
-$dimension-xxsm: 20rem; // 320px
-$dimension-xsm: 40rem; // 640px
-$dimension-sm: 60rem; // 960px
-$dimension-md: 80rem; // 1280px
-$dimension-lg: 100rem; // 1600px
-$dimension-xl: 120rem; // 1920px
-$dimension-xxl: 140rem; // 2240px
-
-// # <=======| Other sizes |=======>
-$max-width: $dimension-xxl;
