--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -490,6 +490,54 @@ body {
 /*
 -  Responsive font sizes
 */
+h1 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+
+@media (min-width: 80rem) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+
+@media (min-width: 80rem) {
+  h2 {
+    font-size: 2rem;
+  }
+}
+
+h3 {
+  font-size: calc(1.3rem + 0.6vw);
+}
+
+@media (min-width: 80rem) {
+  h3 {
+    font-size: 1.75rem;
+  }
+}
+
+h4 {
+  font-size: calc(1.275rem + 0.3vw);
+}
+
+@media (min-width: 80rem) {
+  h4 {
+    font-size: 1.5rem;
+  }
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
 /* -------------------------------------------------------------------------- *\
 +  Partial SCSS Group 4 - `layout/`
 \* -------------------------------------------------------------------------- */
