--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -25,7 +25,7 @@ $max-width: $dimension-xxl;
 
 // #  <=======| Font-size |=======>
 $font-scale: 1.2;
-$font-size: 1rem;
+$font-size: 1rem; // 16px
 $font-size-1: $font-size * $font-scale;
 $font-size-2: $font-size-1 * $font-scale;
 $font-size-3: $font-size-2 * $font-scale;
