style-main: Iniating BEM transformation v8

--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -43,6 +43,7 @@
 
 // #  Typography
 
+// h1
 @mixin subject {
   text-align: center;
 }
@@ -62,6 +63,10 @@
 @mixin text {
   // ...
 }
+
+// #  Helpers
+
+
 
 // -----------------------------------------------------------------------------
 // -  Specific Mixin
