--- a/assets/styles/scss/base/_reset.scss
+++ b/assets/styles/scss/base/_reset.scss
@@ -8,4 +8,5 @@ body {
   margin: 0 auto;
   background-color: var(--background-color);
   color: var(--foreground-color);
+  font-family: 'Roboto', sans-serif;
 }
