--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -467,6 +467,7 @@ body {
   margin: 0 auto;
   background-color: var(--background-color);
   color: var(--foreground-color);
+  font-family: 'Roboto', sans-serif;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -938,13 +939,52 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 -  Section-1: Hero
 \* -------------------------------------------------------------------------- */
+.hero {
+  background-image: url("/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg");
+  background-position: center center;
+  background-size: cover;
+}
+
+.hero__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 85vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-image: linear-gradient(45deg, rgba(240, 0, 48, 0.8), rgba(218, 113, 0, 0.8), rgba(255, 191, 0, 0.8));
+}
+
+.hero__visual {
+  width: 20rem;
+}
+
+.hero__subject {
+  text-align: center;
+}
+
+.hero__title {
+  margin-bottom: 1rem;
+  color: var(--primary-color);
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Section-2: Hot Items
 \* -------------------------------------------------------------------------- */
 .hot-items {
   min-width: 20rem;
   padding: 4rem;
-  background-color: greenyellow;
 }
 
 .hot-items__container {
